# mailingbot

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  justfile  pyproject.toml
.github/workflows/: build-and-push-on-merge.yml  build-on-pr.yml  run-on-cron.yml
src/: mail_handler.py  main.py
src/data/: message.html
